--- a/pom.xml
+++ b/pom.xml
@@ -22,19 +22,29 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.10.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.toile-libre.libe</groupId>
             <artifactId>curl</artifactId>
-            <version>LATEST</version>
+            <version>0.0.38</version>
         </dependency>
         <dependency>
             <groupId>com.googlecode.jsontoken</groupId>
             <artifactId>jsontoken</artifactId>
             <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.5.12</version>
         </dependency>
     </dependencies>
 
